NetBSD Problem Report #44804

From www@NetBSD.org  Wed Mar 30 12:44:56 2011
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 2DFF463C030
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 30 Mar 2011 12:44:56 +0000 (UTC)
Message-Id: <20110330124455.9EB5A63C02F@www.NetBSD.org>
Date: Wed, 30 Mar 2011 12:44:55 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Misplaced parenthesis.
X-Send-Pr-Version: www-1.0

>Number:         44804
>Category:       kern
>Synopsis:       Misplaced parenthesis.
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Mar 30 12:45:00 +0000 2011
>Closed-Date:    Sun Jul 27 04:49:12 +0000 2014
>Last-Modified:  Sun Jul 27 04:49:12 +0000 2014
>Originator:     Henning Petersen
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
Misplaced parenthesis.
>How-To-Repeat:

>Fix:
diff -u -r1.3 drm_scatter.c
--- sys/external/bsd/drm/dist/bsd-core/drm_scatter.c	20 Jun 2009 01:07:09 -0000	1.3
+++ sys/external/bsd/drm/dist/bsd-core/drm_scatter.c	26 Mar 2011 11:34:20 -0000
@@ -129,7 +129,7 @@

 	if ((ret = bus_dmamem_alloc(dmah->tag, request->size, PAGE_SIZE, 0,
 				    dmah->segs, pages, &nsegs,
-				    BUS_DMA_WAITOK) != 0)) {
+				    BUS_DMA_WAITOK)) != 0) {
 		printf("drm: Unable to allocate %lu bytes of DMA, error %d\n",
 		    request->size, ret);
 		dmah->tag = NULL;

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: mbalmer@NetBSD.org
State-Changed-When: Sat, 02 Apr 2011 08:16:49 +0000
State-Changed-Why:
bot committed, please report the problem upstream (3rd party code)


State-Changed-From-To: closed->open
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 07 Oct 2013 05:03:43 +0000
State-Changed-Why:
Nothing says we can't patch 3rd-party code, and given the issues with
DRM, we ought to do so.


From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44804 CVS commit: src/sys/external/bsd/drm/dist/bsd-core
Date: Sun, 27 Jul 2014 03:49:25 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Sun Jul 27 03:49:25 UTC 2014

 Modified Files:
 	src/sys/external/bsd/drm/dist/bsd-core: drm_scatter.c

 Log Message:
 Fix misplaced parenthesis, from Henning Petersen in PR 44804.


 To generate a diff of this commit:
 cvs rdiff -u -r1.3 -r1.4 src/sys/external/bsd/drm/dist/bsd-core/drm_scatter.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 27 Jul 2014 04:49:12 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.