Fix misplaced parenthesis, from Henning Petersen in PR 44804.